tests/expectations/parser/statement/let_mut_recover.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected : -- found 'x'
    --> test:5:17
     |
   5 |         let mut x = 0;
     |                 ^"""]
